--- a/off-canvas.sass
+++ b/off-canvas.sass
@@ -26,6 +26,7 @@ html, body
 	overflow-x: hidden
 
 .off-canvas__nav
+	width: $off-canvas-size
 	+vendor-prefix(transform, translate3d(0,0,0) translateX(-$off-canvas-size))
 	+vendor-prefix(transition, $off-canvas-transition)
 
